config/deploy/staging/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: sesoc-staging
spec:
  ports:
  - name: web-port
    targetPort: 3000
    port: 80
  selector:
    app: web
